--- a/projects/v2/src/app/components/file-upload/file-upload.component.scss
+++ b/projects/v2/src/app/components/file-upload/file-upload.component.scss
@@ -1,3 +1,7 @@
 .file-input {
     display: none;
 }
+
+.file-upload {
+    color: #757575;
+}
